tests/integration/fixtures/laugh/import/error/순환_import/a.laugh
가져오기 "b.laugh" 별칭 b;
